--- a/source/music-client/tsconfig.json
+++ b/source/music-client/tsconfig.json
@@ -13,7 +13,7 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "strictNullChecks": false,
-    "baseUrl": "http://82.157.238.76:8888",
+    "baseUrl": ".",
     "types": [
       "webpack-env"
     ],
